# me

./: 404.html  CNAME  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
about/: index.html
blog/drf-pagenumber-paginator-performance/: index.html
django/drf-pagenumber-paginator-performance/: index.html
docs/: CNAME  about.md  index.md
docs/blog/: drf-pagenumber-paginator-performance.md
docs/django/: cloud-run-app.md
search/: search_index.json
