[tool.poetry]
name = "me"
version = "0.1.0"
description = ""
authors = ["Ernesto Chavez Sanchez <ejchavez88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.4"
pymdown-extensions = "^8.1"
Pygments = "^2.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pynvim = "^0.4.2"
pudb = "^2020.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
